--- a/css/style.production.css
+++ b/css/style.production.css
@@ -1,3 +1,5 @@
+/* prefixed by https://autoprefixer.github.io (PostCSS: v7.0.26, autoprefixer: v9.7.3) */
+
 /*
 Colors Used
 Grid Item Background (Light Gray): #ddd;
@@ -18,7 +20,8 @@ Error Color: #8b0000;
 
 /* This forces Box model into including padding and border in element size calculations if an element has been given a specific size. */
 * {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 /* meaning if you wanted an element of 124px with a padding of 20px and a border of 4px would actually turn into 100px making it more uniform. */
 
@@ -66,6 +69,8 @@ a:hover, a:focus {
   /* No underlining when hovering over a link */
   text-decoration: none;
   opacity: 0.5;
+  -webkit-transition: 0.9s opacity;
+  -o-transition: 0.9s opacity;
   transition: 0.9s opacity;
 }
 
@@ -90,6 +95,8 @@ button {
   border-radius: 3px;
   /* gives the button a bottom border with a width of 2px, a type of solid, and a color in RGBA format */
   border-bottom: 2px solid rgba(0, 0, 0, 0.3);
+  -webkit-transition: 0.2s opacity;
+  -o-transition: 0.2s opacity;
   transition: 0.2s opacity; /* The longer format would be:
   transition-duration: 0.2s;
   transition-property: opacity;       The shorter format gibves the duration and property requirements, while the (transition-timing-function) defaults to (ease) and the (transition-delay) defaults to (0s) thus allowing a shorthand version by simply using --> transition: (duration) (property); */
@@ -109,6 +116,8 @@ button {
   border-radius: 3px;
   /* gives the button a bottom border with a width of 2px, a type of solid, and a color in RGBA format */
   border-bottom: 2px solid rgba(0, 0, 0, 0.3);
+  -webkit-transition: 0.2s opacity;
+  -o-transition: 0.2s opacity;
   transition: 0.2s opacity; /* The longer format would be:
   transition-duration: 0.2s;
   transition-property: opacity;       The shorter format gibves the duration and property requirements, while the (transition-timing-function) defaults to (ease) and the (transition-delay) defaults to (0s) thus allowing a shorthand version by simply using --> transition: (duration) (property); */
@@ -145,17 +154,30 @@ button:hover, button:focus,
 }
 
 /* PORTFOLIO PORTRAIT */
-@keyframes rotate-picture {
+@-webkit-keyframes rotate-picture {
   0% {
-    transform: rotateY(0)
+    -webkit-transform: rotateY(0);
+            transform: rotateY(0)
   }
   100% {
-    transform: rotateY(360deg)
+    -webkit-transform: rotateY(360deg);
+            transform: rotateY(360deg)
+  }
+}
+@keyframes rotate-picture {
+  0% {
+    -webkit-transform: rotateY(0);
+            transform: rotateY(0)
+  }
+  100% {
+    -webkit-transform: rotateY(360deg);
+            transform: rotateY(360deg)
   }
 }
 
 .rotate-picture {
-  animation: 0.5s rotate-picture 1 linear;
+  -webkit-animation: 0.5s rotate-picture 1 linear;
+          animation: 0.5s rotate-picture 1 linear;
 }
 
 .profile__portrait {
@@ -175,33 +197,49 @@ button:hover, button:focus,
 /* PAGE-FOOTER */
 .page-footer {
   clear: both;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   text-align: center;
 }
 
 
 /* PAGE-HEADER      The following is flex-box layout */
 .page-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   width: 100%;
   padding: 10px;
 }
 
 .page-header__item {
-  flex: 0 1 200px;   /* Gives all items base width of 200px and allows to shrink within same ratio. (growth will be added to nav only) */
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 200px;
+          flex: 0 1 200px;   /* Gives all items base width of 200px and allows to shrink within same ratio. (growth will be added to nav only) */
 }
 
 .page-header__item:last-child {
-  flex-grow: 1;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   text-align: right;
 }
 
 /* ABOUT PAGE */
 .about {
   clear: both;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   text-align: center;
 }
 
@@ -232,7 +270,9 @@ button:hover, button:focus,
 
 /* Styling CSS Grid */  /* The following is an example of a Grid layout. */
 .grid {
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 1fr 20px 1fr 20px 1fr;
   grid-template-columns: 1fr 1fr 1fr; /*  (1fr 1fr 1fr) (fr) stands for fraction and is a flex unit replacing the original (300px 300px 300px) value, you can use this because each grid item should be the same size. (fr) allows the columns to grow and shring within the page. Each section is spaced based on the other. If you wanted one column to be twice the size of the original you pass on the trait 2fr */
   /* grid-template-row: default is auto so you don't even need to add it, grid will add for you. */
   grid-gap: 20px; /* Puts spacing between the grid items like margin would do by using (grid-gap) */
@@ -245,7 +285,10 @@ button:hover, button:focus,
 }
 
 .grid__item:last-child {
+  -ms-grid-column: 3;
   grid-column: 3/3;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
   grid-row: 1/3;
   /* Longer way to code this:
   .grid__item:last-child {
@@ -259,6 +302,17 @@ button:hover, button:focus,
 
 
 /* Here we have Animation @keyframe rules */
+@-webkit-keyframes color-change {    /* color-change is the name of the animation which is used to target a specific element. */
+  0% {
+    fill: #edc655;
+  }
+  50% {
+    fill: #fcffad;       /* This animation is being used to effect the sun on the about page. the (class) [].sun] has already been added to the SVG image in the example. */
+  }
+  100% {
+    fill: #f76414;
+  }
+}
 @keyframes color-change {    /* color-change is the name of the animation which is used to target a specific element. */
   0% {
     fill: #edc655;
@@ -272,7 +326,8 @@ button:hover, button:focus,
 }
 
 .sun {
-  animation: 4s color-change infinite alternate linear;
+  -webkit-animation: 4s color-change infinite alternate linear;
+          animation: 4s color-change infinite alternate linear;
 }
 /* Longer format for the .sun animation:
 .sun {
@@ -284,52 +339,76 @@ button:hover, button:focus,
 }
 */
 
-@keyframes cloud-move {
+@-webkit-keyframes cloud-move {
   from {
-    transform: translate(0, 50px);
+    -webkit-transform: translate(100px, 10px);
+            transform: translate(100px, 10px);
   }
   to {
-    transform: translate(200px, 50px);
+    -webkit-transform: translate(0px, 10px);
+            transform: translate(0px, 10px);
+  }
+}
+
+@keyframes cloud-move {
+  from {
+    -webkit-transform: translate(100px, 10px);
+            transform: translate(100px, 10px);
+  }
+  to {
+    -webkit-transform: translate(0px, 10px);
+            transform: translate(0px, 10px);
   }
 }
 
 .cloud-front {
-  animation: 30s cloud-move infinite alternate linear;
+  -webkit-animation: 20s cloud-move infinite alternate linear;
+          animation: 20s cloud-move infinite alternate linear;
+}
+
+@-webkit-keyframes cloud-move-reverse {
+  from {
+    -webkit-transform: translate(-30px, 10px);
+            transform: translate(-30px, 10px);
+  }
+  to {
+    -webkit-transform: translate(89px, 10px);
+            transform: translate(89px, 10px);
+  }
 }
 
 @keyframes cloud-move-reverse {
   from {
-    transform: translate(446px, 48px);
+    -webkit-transform: translate(-30px, 10px);
+            transform: translate(-30px, 10px);
   }
   to {
-    transform: translate(100px, 48px);
+    -webkit-transform: translate(89px, 10px);
+            transform: translate(89px, 10px);
   }
 }
 
 .cloud-back {
-  animation: 20s cloud-move-reverse infinite alternate linear;
+  -webkit-animation: 10s cloud-move-reverse infinite alternate linear;
+          animation: 10s cloud-move-reverse infinite alternate linear;
 }
 
-.hometown-image {
-  clear: both;
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-}
-
-.berlin-picture {
+.hometown-picture {
   width: 80%;
   height: auto;
+  text-align: center;
 }
 
 /* Media Queries all go at the end of CSS as the last rule in CSS is the winner. If you have a new rule following media query, it will not be used. */
 @media all and (max-width: 500px) {
   .grid {
+    -ms-grid-columns: 1fr;
     grid-template-columns: 1fr;
   }
 }
 @media all and (min-width: 500px) and (max-width: 750px){
   .grid {
+    -ms-grid-columns: 1fr 20px 1fr;
     grid-template-columns: 1fr 1fr;
   }
 }
