--- a/css/style.production.css
+++ b/css/style.production.css
@@ -269,6 +269,19 @@ button:hover, button:focus,
   list-style-type: none; padding: 0;
 }
 
+.contact_menu {
+  clear: both;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: left;
+  padding: 20px;
+}
+
 /* NAVIGATION */
 .navigation-list {
   list-style-type: none;
