--- a/css/styles.css
+++ b/css/styles.css
@@ -208,6 +208,14 @@ button:hover, button:focus,
   list-style-type: none; padding: 0;
 }
 
+.contact_menu {
+  clear: both;
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  padding: 20px;
+}
+
 /* NAVIGATION */
 .navigation-list {
   list-style-type: none;
