--- a/css/styles.css
+++ b/css/styles.css
@@ -32,11 +32,11 @@ Header Font Weight: 700;
   --header-font-weight: 700;
 }
 
-
 /* This forces Box model into including padding and border in element size calculations if an element has been given a specific size. */
 * {
   box-sizing: border-box;
 }
+
 /* meaning if you wanted an element of 124px with a padding of 20px and a border of 4px would actually turn into 100px making it more uniform. */
 
 /* BODY */
@@ -49,8 +49,9 @@ body {
 }
 
 p {
-  font-size: var(--secondary-font-size)
+  font-size: var(--secondary-font-size);
 }
+
 /* HEADERS */
 h1 {
   font-size: 30px;
@@ -66,6 +67,7 @@ h3 {
   font-size: 18px;
   font-weight: var(--header-font-weight);
 }
+
 /* LINKS */
 a {
   color: var(--primary-color);
@@ -79,7 +81,8 @@ a:visited {
 }
 
 /* a:hover shows an effect when the mouse is hovering over a link or a button. a:focus does the same thing while the user navigates the web page with the keyboard */
-a:hover, a:focus {
+a:hover,
+a:focus {
   /* No underlining when hovering over a link */
   text-decoration: none;
   opacity: 0.5;
@@ -97,16 +100,20 @@ button,
 .button_secondary {
   /* overwrites browser defaults and resets the border */
   border: none;
+
   /* takes the font from the outer container */
   display: inline-block;
   font-family: inherit;
+
   /* styles the background color, font color, and text decoration (underline, etc.) of the button */
   background-color: var(--primary-color);
   color: var(--button-text-primary);
   text-decoration: none;
-  /*adds spacing to the button (this will be discussed more in-depth later) */
+
+  /* adds spacing to the button (this will be discussed more in-depth later) */
   padding: 10px;
   border-radius: 3px;
+
   /* gives the button a bottom border with a width of 2px, a type of solid, and a color in RGBA format */
   border-bottom: 2px solid rgba(0, 0, 0, 0.3);
   transition: 0.2s opacity; /* The longer format would be:
@@ -114,10 +121,13 @@ button,
   transition-property: opacity;       The shorter format gibves the duration and property requirements, while the (transition-timing-function) defaults to (ease) and the (transition-delay) defaults to (0s) thus allowing a shorthand version by simply using --> transition: (duration) (property); */
 }
 
-button:hover, button:focus,
-.button:hover, .button:focus {
+button:hover,
+button:focus,
+.button:hover,
+.button:focus {
   /* lets the mouse appear as a hand when hovering over the button */
   cursor: pointer;
+
   /* reduces the opacity of the button to 80% */
   opacity: 0.8;
 }
@@ -127,7 +137,10 @@ button:hover, button:focus,
   color: var(--primary-font-color);
 }
 
-/* Required fields */   /* When reffering to a (class) to change it's characteristics in CSS you must add the (.) in order to pull up the specific (class). */
+/* Required fields */
+
+/* When reffering to a (class) to change it's characteristics in CSS you must add the (.) in order to pull up the specific (class). */
+
 .required-field {
   font-family: inherit;
   font-size: 26px;
@@ -146,10 +159,11 @@ button:hover, button:focus,
 /* PORTFOLIO PORTRAIT */
 @keyframes rotate-picture {
   0% {
-    transform: rotateY(0)
+    transform: rotateY(0);
   }
+
   100% {
-    transform: rotateY(360deg)
+    transform: rotateY(360deg);
   }
 }
 
@@ -179,7 +193,6 @@ button:hover, button:focus,
   text-align: center;
 }
 
-
 /* PAGE-HEADER      The following is flex-box layout */
 .page-header {
   display: flex;
@@ -205,7 +218,8 @@ button:hover, button:focus,
 }
 
 .about-list {
-  list-style-type: none; padding: 0;
+  list-style-type: none;
+  padding: 0;
 }
 
 .contact_menu {
@@ -224,23 +238,25 @@ button:hover, button:focus,
 .navigation-list li {
   display: inline-block;
   margin-left: 15px;
-
 }
 
 .navigation-list__item--active {
   text-decoration: none;
 }
 
-/* Grid fallback*/
+/* Grid fallback */
 .grid__item {
   display: inline-block;
   width: 33%;
 }
 
-/* Styling CSS Grid */  /* The following is an example of a Grid layout. */
+/* Styling CSS Grid */
+
+/* The following is an example of a Grid layout. */
 .grid {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr; /*  (1fr 1fr 1fr) (fr) stands for fraction and is a flex unit replacing the original (300px 300px 300px) value, you can use this because each grid item should be the same size. (fr) allows the columns to grow and shring within the page. Each section is spaced based on the other. If you wanted one column to be twice the size of the original you pass on the trait 2fr */
+
   /* grid-template-row: default is auto so you don't even need to add it, grid will add for you. */
   grid-gap: 20px; /* Puts spacing between the grid items like margin would do by using (grid-gap) */
 }
@@ -254,6 +270,7 @@ button:hover, button:focus,
 .grid__item:last-child {
   grid-column: 3/3;
   grid-row: 1/3;
+
   /* Longer way to code this:
   .grid__item:last-child {
     grid-column-start: 3;
@@ -264,15 +281,16 @@ button:hover, button:focus,
   */
 }
 
-
 /* Here we have Animation @keyframe rules */
 @keyframes color-change {    /* color-change is the name of the animation which is used to target a specific element. */
   0% {
     fill: #edc655;
   }
+
   50% {
     fill: #fcffad;       /* This animation is being used to effect the sun on the about page. the (class) [].sun] has already been added to the SVG image in the example. */
   }
+
   100% {
     fill: #f76414;
   }
@@ -281,6 +299,7 @@ button:hover, button:focus,
 .sun {
   animation: 4s color-change infinite alternate linear;
 }
+
 /* Longer format for the .sun animation:
 .sun {
   animation-duration: 4s;
@@ -295,8 +314,9 @@ button:hover, button:focus,
   from {
     transform: translate(100px, 10px);
   }
+
   to {
-    transform: translate(0px, 10px);
+    transform: translate(0, 10px);
   }
 }
 
@@ -308,6 +328,7 @@ button:hover, button:focus,
   from {
     transform: translate(-30px, 10px);
   }
+
   to {
     transform: translate(89px, 10px);
   }
@@ -329,19 +350,23 @@ button:hover, button:focus,
     grid-template-columns: 1fr;
   }
 }
-@media all and (min-width: 500px) and (max-width: 750px){
+
+@media all and (min-width: 500px) and (max-width: 750px) {
   .grid {
     grid-template-columns: 1fr 1fr;
   }
 }
+
 @media all and (max-width: 750px) {
   .grid {
     grid-gap: 10px;
   }
+
   .grid__item:last-child {
     grid-column: auto / auto;
     grid-row: auto / auto;
   }
+
   h1 {
     font-size: 22px;
   }
@@ -379,6 +404,6 @@ button:hover, button:focus,
 */
 @media all and (max-width: 500px) {
   .page-header {
-    padding: 0px;
+    padding: 0;
   }
 }
