--- a/css/style.production.css
+++ b/css/style.production.css
@@ -275,6 +275,7 @@ button:focus,
   -ms-flex-positive: 1;
   flex-grow: 1;
   text-align: right;
+  padding-right: 10px;
 }
 
 /* ABOUT PAGE */
@@ -534,6 +535,6 @@ font-size: 22px;
 */
 @media all and (max-width: 500px) {
   .page-header {
-    padding-right: 10px;
+    padding: 0;
   }
 }
