--- a/css/style.production.css
+++ b/css/style.production.css
@@ -240,7 +240,7 @@ button:focus,
 .profile {
   max-width: 700px;
   margin: 0 auto;
-  padding: 10px;
+  padding-left: 10px;
 }
 
 /* PAGE-FOOTER */
