update margin for mobile

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -239,8 +239,7 @@ button:focus,
 
 .profile {
   max-width: 700px;
-  margin: 0 auto;
-  padding-left: 10px;
+  margin: 10px auto;
 }
 
 /* PAGE-FOOTER */
