--- a/css/style.production.css
+++ b/css/style.production.css
@@ -240,7 +240,6 @@ button:focus,
 .profile {
   max-width: 700px;
   margin: 0 auto;
-  padding-left: 10px;
 }
 
 /* PAGE-FOOTER */
@@ -269,6 +268,7 @@ button:focus,
   -webkit-box-flex: 0;
   -ms-flex: 0 1 200px;
   flex: 0 1 200px;   /* Gives all items base width of 200px and allows to shrink within same ratio. (growth will be added to nav only) */
+  padding: 10px;
 }
 
 .page-header__item:last-child {
@@ -276,7 +276,6 @@ button:focus,
   -ms-flex-positive: 1;
   flex-grow: 1;
   text-align: right;
-  padding-right: 20px;
 }
 
 /* ABOUT PAGE */
@@ -297,8 +296,19 @@ button:focus,
   padding: 0;
 }
 
-.contact_menu {
-  clear: both;
+.contact_form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  text-align: center;
+  padding: 10px;
+}
+
+.contact-info {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -306,8 +316,31 @@ button:focus,
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
-  text-align: left;
-  padding: 20px;
+  padding: 10px;
+}
+
+.contact-buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
+  flex-direction: row;
+}
+
+.contact-all {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  width: 100%;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 /* NAVIGATION */
