--- a/css/style.production.css
+++ b/css/style.production.css
@@ -6,15 +6,20 @@ Primary Color: #357b70;
 Primary Background: #fffafa;
 Primary Font Color: #222;
 Primary Font Size: 18px;
-Primary Button Text Color: #f8f8ff;
+New Primary Button Text: #000;
+Old Primary Button Text Color: #f8f8ff;
+New Secondary Color: #ccc;
 Secondary Color: #e0b354;
 Secondary Font Size: 16px;
-Visited Link: #05676e;
+New Visited Link: #065535;
+Old Visited Link: #05676e;
 Active Link: #489c79;
 Dark Grey: #2b2b2b;
 Error Color: #8b0000;
 Grid Background Color: #ddd;
 Header Font Weight: 700;
+Button Background: #cbbeb5;
+Other Grey: #696969;
 */
 
 /* CSS variables */
@@ -64,7 +69,7 @@ a {
 
 a:visited {
   /* visited link */
-  color: #05676e;
+  color: #065535;
   font-size: 18px;
 }
 
@@ -94,8 +99,8 @@ button {
   font-family: inherit;
 
   /* styles the background color, font color, and text decoration (underline, etc.) of the button */
-  background-color: #357b70;
-  color: #f8f8ff;
+  background-color: #cbbeb5;
+  color: #000;
   text-decoration: none;
 
   /* adds spacing to the button (this will be discussed more in-depth later) */
@@ -120,8 +125,8 @@ button {
   font-family: inherit;
 
   /* styles the background color, font color, and text decoration (underline, etc.) of the button */
-  background-color: #357b70;
-  color: #f8f8ff;
+  background-color: #cbbeb5;
+  color: #000;
   text-decoration: none;
 
   /* adds spacing to the button (this will be discussed more in-depth later) */
@@ -146,8 +151,8 @@ button {
   font-family: inherit;
 
   /* styles the background color, font color, and text decoration (underline, etc.) of the button */
-  background-color: #357b70;
-  color: #f8f8ff;
+  background-color: #cbbeb5;
+  color: #000;
   text-decoration: none;
 
   /* adds spacing to the button (this will be discussed more in-depth later) */
@@ -175,7 +180,7 @@ button:focus,
 }
 
 .button_secondary {
-  background-color: #e0b354;
+  background-color: #ccc;
   color: #222;
 }
 
