--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -62,11 +62,13 @@ p {
 h1 {
   font-size: 30px;
   font-weight: var(--header-font-weight);
+  margin: 2rem;
 }
 
 h2 {
   font-size: 24px;
   font-weight: var(--header-font-weight);
+  margin: 2rem;
 }
 
 h3 {
@@ -100,6 +102,24 @@ a:focus {
 a:active {
   /* selected link */
   color: var(--active-link);
+}
+
+.main-content {
+  display: block;
+  text-align: center;
+}
+
+.app-ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.app-image {
+  max-width: 35rem;
+}
+
+.project-container {
+  text-align: center;
 }
 
 /* BUTTONS */
@@ -285,17 +305,19 @@ button:focus,
 
   /* grid-template-row: default is auto so you don't even need to add it, grid will add for you. */
   grid-gap: 20px; /* Puts spacing between the grid items like margin would do by using (grid-gap) */
+  margin: 1rem;
 }
 
 .grid__item {
   background-color: var(--grid-background-color);
   width: auto;
   padding: 10px;
+  margin: 1rem;
 }
 
 .grid__item:last-child {
   grid-column: 3/3;
-  grid-row: 1/3;
+  grid-row: 1/1;
 
   /* Longer way to code this:
   .grid__item:last-child {
