--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -365,6 +365,7 @@ CSS you must add the (.) in order to pull up the specific (class). */
 .contact-container {
   border-radius: 5px;
   background-color: var(--secondary-color);
+  margin: auto;
 }
 
 input[type='text'],
